fixed display on tablet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,10 @@ footer ul li:nth-child(1) { padding-left: 0 }
     color:  white;
     vertical-align:middle;
     margin-top: 10px;
+    font-size: 85%;
+
 }
+
 
 .navbar .nav > li > a:hover {
     color:#FFC72C ;
@@ -113,8 +116,42 @@ footer ul li:nth-child(1) { padding-left: 0 }
     background-color:#041E42!important;;
 }
 
-
-
+@media (max-width: 1300px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
 
 
 
